// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolver graph layout when rendering no nodes renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {},
}
`;

exports[`resolver graph layout when rendering one node renders right 1`] = `
Object {
  "edgeLineSegments": Array [],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two forks, and one fork has an extra long tine renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Object {
      "points": Array [
        Array [
          0,
          -0.8164965809277259,
        ],
        Array [
          197.9898987322333,
          -115.12601791080935,
        ],
      ],
    },
    Object {
      "points": Array [
        Array [
          0,
          -229.43553924069099,
        ],
        Array [
          395.9797974644666,
          -0.8164965809277259,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          0,
          -229.43553924069099,
        ],
        Array [
          197.9898987322333,
          -343.7450605705726,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          395.9797974644666,
          -0.8164965809277259,
        ],
        Array [
          593.9696961966999,
          -115.12601791080935,
        ],
      ],
    },
    Object {
      "points": Array [
        Array [
          197.9898987322333,
          -343.7450605705726,
        ],
        Array [
          395.9797974644666,
          -458.05458190045425,
        ],
      ],
    },
    Object {
      "points": Array [
        Array [
          296.98484809834997,
          -515.2093425653951,
        ],
        Array [
          494.9747468305833,
          -400.8998212355134,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          296.98484809834997,
          -515.2093425653951,
        ],
        Array [
          494.9747468305833,
          -629.5188638952767,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          494.9747468305833,
          -400.8998212355134,
        ],
        Array [
          692.9646455628166,
          -515.2093425653951,
        ],
      ],
    },
    Object {
      "points": Array [
        Array [
          593.9696961966999,
          -115.12601791080935,
        ],
        Array [
          791.9595949289333,
          -229.43553924069096,
        ],
      ],
    },
    Object {
      "points": Array [
        Array [
          692.9646455628166,
          -286.5902999056318,
        ],
        Array [
          890.9545442950499,
          -172.28077857575016,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          692.9646455628166,
          -286.5902999056318,
        ],
        Array [
          890.9545442950499,
          -400.89982123551346,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          890.9545442950499,
          -172.28077857575016,
        ],
        Array [
          1088.9444430272833,
          -286.5902999056318,
        ],
      ],
    },
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          1088.9444430272833,
          -286.5902999056318,
        ],
        Array [
          1286.9343417595164,
          -400.89982123551346,
        ],
      ],
    },
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      197.9898987322333,
      -343.7450605705726,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 2,
        "unique_ppid": 0,
      },
    } => Array [
      593.9696961966999,
      -115.12601791080935,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 3,
        "unique_ppid": 1,
      },
    } => Array [
      494.9747468305833,
      -629.5188638952767,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 4,
        "unique_ppid": 1,
      },
    } => Array [
      692.9646455628166,
      -515.2093425653951,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 5,
        "unique_ppid": 2,
      },
    } => Array [
      890.9545442950499,
      -400.89982123551346,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 6,
        "unique_ppid": 2,
      },
    } => Array [
      1088.9444430272833,
      -286.5902999056318,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "unique_pid": 7,
        "unique_ppid": 6,
      },
    } => Array [
      1286.9343417595164,
      -400.89982123551346,
    ],
  },
}
`;

exports[`resolver graph layout when rendering two nodes, one being the parent of the other renders right 1`] = `
Object {
  "edgeLineSegments": Array [
    Object {
      "metadata": Object {},
      "points": Array [
        Array [
          0,
          -0.8164965809277259,
        ],
        Array [
          197.9898987322333,
          -115.12601791080935,
        ],
      ],
    },
  ],
  "processNodePositions": Map {
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "creation_event",
        "event_type_full": "process_event",
        "process_name": "",
        "unique_pid": 0,
      },
    } => Array [
      0,
      -0.8164965809277259,
    ],
    Object {
      "@timestamp": 1582233383000,
      "agent": Object {
        "id": "",
        "type": "",
        "version": "",
      },
      "endgame": Object {
        "event_subtype_full": "already_running",
        "event_type_full": "process_event",
        "unique_pid": 1,
        "unique_ppid": 0,
      },
    } => Array [
      197.9898987322333,
      -115.12601791080935,
    ],
  },
}
`;
